# libcmakeserver

./: CMakeLists.txt  Doxyfile.in  README.md  cmakeserverConfig.cmake  conanfile.py
cmake/: FindCoroutines.cmake  FindSphinx.cmake  Finddoctest.cmake  clang-libc++.cmake
doc/: CMakeLists.txt  conf.py  index.rst
doc/API/: index.rst
doc/API/Communicating with CMake/: index.rst
doc/API/Message Types/: index.rst
include/cmakeserver/: cmake_protocol.hpp  cmakeserver.hpp  coroutines.hpp  use_boost_future.hpp
libcmakeserver/: CMakeLists.txt
libcmakeserver/include/cmakeserver/: cmake_protocol.hpp  cmakeserver.hpp  coroutines.hpp  ipc.hpp
libcmakeserver/include/cmakeserver/detail/: filesystem.hpp
libcmakeserver/include/cmakeserver/linux/: ipc.hpp
libcmakeserver/include/cmakeserver/win32/: ipc.hpp
libcmakeserver/src/: CMakeLists.txt  cmake_protocol.cpp  ipc.cpp  ipc_posix.cpp
libcmakeserver/src/posix/: ipc.cpp
test/: CMakeLists.txt  main.cpp
test/protocol/: hello.cpp  version.cpp
test/system/: temporary_filename.cpp
